# eeg-incidence

./: .gitignore  01_test_from_databricks.ipynb  LICENSE  README.md
databricks/src/bronze/: flow_b_bronze.ipynb  jahresabrechnung_bronze.ipynb  mastr.ipynb
databricks/src/gold/: netto_incidence_per_land_2024.ipynb
databricks/src/silver/: dim_anlage.ipynb  dim_bundesland.ipynb  fct_eeg_zahlung_jaehrlich.ipynb
docs/: architecture.md  data-sources.md  methodology.md  pyproject.toml
ingest/mastr/: Inspect_Ingestion_Files.py  Inspect_TenneT.py  bulk_to_csv.py  sqlite_to_csv.py
ingest/netztransparenz/: test_auth.py
sales/: bewegungsdaten_legende.xlsx
