[project]
name = "eeg-incidence-ingest"
version = "0.1.0"
description = "Ingest scripts for the EEG incidence lakehouse"
requires-python = ">=3.11"
dependencies = [
    "open-mastr",
    "requests",
    "pandas",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]